# iterm2-remote

./: .gitignore  README.md  __main__.py  info.txt  makefile  old-main.py  pyproject.toml  requirements.txt
client/: __main__.py  client.py
client/helpers/: state_info.py
iterm2_api/actions/: movement.py  send.py  spawn.py
iterm2_api/helpers/: queries.py
proto/: iterm2_remote.proto  iterm2_remote_pb2.py  iterm2_remote_pb2_grpc.py
server/: __main__.py  server.py
